# ZonalArchECU_W_SomeIP

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  draft-system-arch.drawio  flash2esp.sh  log.txt  readme.md  sdkconfig  sdkconfig.old
AppComm/: CMakeLists.txt
AppComm/Dummy/: Dummy.c  Dummy.h
AppComm/EthernetW5500/: E2E.c  EthernetW550.h  EthernetW5500.c  EthernetW5500.h  EthernetW5500Cmds.h  EthernetW550Cmds.h  Module.c  Module.h  Network.c  Network.h  RxedPacketQueue.h  RxedpacketQueue.c
AppComm/HBridge/: HBridge.c  HBridge.h  Module.c  Module.h
AppComm/Heart/: Heart.c  Heart.h
AppComm/Routing/: All.h  E2EComputeHelper.h  RoutingMatrix.c  SyncFrame.h
AppComm/UltraSonic/: Module.c  Module.h  UltraSonic.c  UltraSonic.h
AppComm/__Shared/: SyncFrame.h
AppConfig/: All.h  CMakeLists.txt  DevicePinout.h
AppConfig/Comm/: Comm.c  Comm.c.def  Comm.cnf  Comm.h  Comm.h.def
AppConfig/Pinout/: Pinout.cnf  Pinout.h  Pinout.h.def
AppESPWrap/: All.h  CMakeLists.txt  ESPFreeRTOSWrapper.h  ESPLogWrapper.h
AppRT/: All.h  CMakeLists.txt
AppRT/SOMEIP/: Service.h
AppRT/StartUp/: Service.c  Service.h
AppUtils/: All.h  Bitwise.h  CMakeLists.txt  FlagControl.h  ReturnType.h
Docs/: W5500_Startup.mermaid  draft-system-arch-logic.mermaid  draft-system-arch.drawio
PythonTest/: Broadcast.py  Broadcast_UDP.py  CCU_ListenFromZECU.py  Unicast_255.py  log.txt
components/AppBase/: All.h  AppFrame.c  AppFrame.h  AppUtils.c  Arithmetic.h  BitOp.h  Bitwise.h  CMakeLists.txt  CString.c  CString.h  CString64.c  CString64.h  Deque.c  Deque.h  FlagControl.h  GlobalInit.c  GlobalInit.h  Loop.h  Network.c  Network.h  NodeAuth.c  NodeAuth.h  ReturnType.h  SystemTypeDef.h
components/AppComm/: CMakeLists.txt  SharedAPIs.h  __CommonHeaders.h
components/AppComm/Dummy/: Dummy.c  Dummy.h
components/AppComm/EthernetW5500/: E2E.c  E2E.h  EthernetW5500.c  EthernetW5500.h  EthernetW5500Cmds.h  Module.c  Module.h  Network.c  Network.h  PacketQueue.c  PacketQueue.h
components/AppComm/HBridge/: HBridge.c  HBridge.h  Module.c  Module.h
components/AppComm/LocationATGM336H/: Module.c  Module.h
components/AppComm/Routing/: All.h  RoutingMatrix.c  RoutingMatrix.h  SyncFrame.h
components/AppComm/UltraSonic/: Module.c  Module.h  UltraSonic.c  UltraSonic.h
components/AppConfig/: .gitignore  All.h  CMakeLists.txt  Safety.c  SystemConfig.yml  __CommonHeaders.h  generate_config.py  req.txt
components/AppConfig/Comm/: Comm.c  Comm.c.def  Comm.cnf  Comm.h  Comm.h.def  Makefile
components/AppConfig/Pinout/: Makefile  Pinout.cnf  Pinout.h  Pinout.h.def
components/AppConfig/Safety/: Safety.c  Safety.h
components/AppConfig/Service/: Service.h
components/AppConfig/SystemLog/: SystemLog.h
components/AppESPWrap/: All.h  AppESPWrap.c  CMakeLists.txt  ESPFreeRTOSWrapper.h  ESPGPIOWrapper.h  ESPHeapWrapper.h  ESPInfo.h  ESPLogWrapper.h
components/AppRT/: All.h  CMakeLists.txt  __CommonHeaders.h
components/AppRT/HeartBeat/: Module.c  Module.h
components/AppRT/Routing/: All.h  E2EComputeHelper.c  E2EComputeHelper.h  RoutingMatrix.h  SyncFrame.c  SyncFrame.h  TempControlFrame.c  TempControlFrame.h
components/AppRT/SOMEIP/: Module.c  Module.h  SOMEIP.c  SOMEIP_Enums.h  SOMEIP_PacketStructure.h  __CommonHeaders.h
components/AppRT/StartUp/: Service.c  Service.h
components/AppRT/TestModule/: TestModule.c  TestModule.h
components/AppUtils/: AppUtils.c  CMakeLists.txt  Deque.c  Deque.h  ReturnType.h  SystemTypeDef.h
docs/: SequenceDiagram_ReadPacket.mmd  draft-system-arch.drawio  flowcharts.drawio  mewo.drawio
main/: CMakeLists.txt  MainApp.c  MainApp.h  xFindMyMoto.c  xFindMyMoto.h
monitor/: CompileAndRun.sh  CoreNetwork.py  MonitorConfig.py  MonitorMain.py  MonitorMain.spec  Sniff.log.txt  Sniffer.log.txt  Sniffer.py  UdpListener.py  monitor.ui  monitor_auth.py  monitor_connect_zecu.py  monitor_connect_zecu.ui  monitor_control_zecu.py  monitor_control_zecu.ui  monitor_list_zecu.py  monitor_ui.py  run.sh
python_analyze/: SpamCmd.py  input.txt  latency_analyze.py
python_test/: Broadcast_ARP.py  Broadcast_UDP.py  CCU_ListenFromZECU.py  Req.txt  SendCommand.py  Unicast_255.py
