idf_component_register(
    SRCS 
        "MainApp.c"
    INCLUDE_DIRS 
        "."
    REQUIRES 
        esp_driver_gpio 
        esp_driver_spi 
        esp_timer 
        AppConfig 
        AppESPWrap 
        AppUtils
        AppComm
)

target_include_directories(${COMPONENT_TARGET}
    PUBLIC
    ../AppConfig
    ../AppESPWrap
    ../AppUtils
    ../AppComm
)
