idf_component_register(
    SRCS
        "AppESPWrap.c"
    INCLUDE_DIRS
        "."
    REQUIRES 
        esp_driver_gpio 
        esp_driver_spi  
        driver 
        esp_driver_gpio 
        esp_driver_spi 
        esp_timer 
        driver 
        esp_hw_support 
        esp_driver_ledc 
)
